--- a/app/views/admin/users/_activity.html.erb
+++ b/app/views/admin/users/_activity.html.erb
@@ -11,12 +11,14 @@
     </thead>
     <tbody>
       <% activity.each do |log| %>
-        <tr>
-          <td><%= link_to("#{t(".help_request_num")}#{log.help_request.number}", edit_admin_help_request_path(log.help_request)) %></td>
-          <td><%= log.label %></td>
-          <td><%= log.comment %></td>
-          <td><%= print_datetime(log.created_at) %></td>
-        </tr>
+        <% if log.help_request %>
+          <tr>
+            <td><%= link_to("#{t(".help_request_num")}#{log.help_request.number}", edit_admin_help_request_path(log.help_request)) %></td>
+            <td><%= log.label %></td>
+            <td><%= log.comment %></td>
+            <td><%= print_datetime(log.created_at) %></td>
+          </tr>
+        <% end %>
       <% end %>
     </tbody>
   </table>
